# Slipper

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: .gitignore
source/Slipper_Editor/: .gitignore  CMakeLists.txt  Program.cs  Slipper_Editor.csproj
source/Slipper_Editor/EditorContent/: .gitignore  CMakeLists.txt
source/Slipper_Editor/EditorContent/Shaders/: ParticleTest.comp
source/Slipper_Editor/EditorContent/Shaders/Spir-V/: ParticleTest.comp.spv
source/Slipper_Editor/src/: ComponentEditorRegistry.cpp  ComponentEditorRegistry.h  EditorAppComponent.h  IComponentEditor.h  SlipperEditor.cpp  SlipperEditor.h  TransformEditor.cpp  TransformEditor.h
source/Slipper_Editor/src/AppComponents/: Editor.cpp  Editor.h
source/Slipper_Editor/src/Ecs/Systems/: EditorCameraSystem.cpp  EditorCameraSystem.h
source/Slipper_Editor/src/EditorAppComponents/: ComputeShaderTest.cpp  ComputeShaderTest.h  Editor.cpp  Editor.h
source/Slipper_Editor/src/Editors/: CameraEditor.cpp  CameraEditor.h  ComponentEditorRegistry.cpp  ComponentEditorRegistry.h  EntityOutliner.cpp  EntityOutliner.h  SceneObjectEditor.cpp  SceneObjectEditor.h  SceneOutliner.cpp  SceneOutliner.h  TransformEditor.cpp  TransformEditor.h
source/Slipper_Editor/src/Editors/ComponentEditors/: CameraEditor.cpp  CameraEditor.h  ComponentEditorRegistry.cpp  ComponentEditorRegistry.h  RendererEditor.cpp  RendererEditor.h  SceneObjectEditor.cpp  SceneObjectEditor.h  TransformEditor.cpp  TransformEditor.h
source/Slipper_Engine/: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
source/Slipper_Engine/EngineContent/: CMakeLists.txt
source/Slipper_Engine/EngineContent/Shaders/: Basic.frag  Basic.vert
source/Slipper_Engine/EngineContent/Shaders/Spir-V/: Basic.frag.spv  Basic.vert.spv
source/Slipper_Engine/src/: DeviceDependentObject.cpp  DeviceDependentObject.h  Slipper_Engine.cpp  Slipper_Engine_Standalone  Slipper_Engine_Standalone.cpp  common_defines.h  common_includes.h  pch.h  terminal_util.cpp  terminal_util.h
source/Slipper_Engine/src/Components/: CameraComponent.cpp  CameraComponent.h  TransformComponent.cpp  TransformComponent.h
source/Slipper_Engine/src/Core/: API.h  AppComponent.cpp  AppComponent.h  AppEvents.h  Application.cpp  Application.h  EcsInterface.cpp  EcsInterface.h  Entity.cpp  Entity.h  Event.h  Input.cpp  Input.h  InputEvent.h  MaterialManager.cpp  MaterialManager.h  ModelManager.cpp  ModelManager.h  Object.h  Pointer.h  ProgramComponent.h  ShaderManager.cpp  ShaderManager.h  SlipperObject.h  SlipperSceneObject.cpp  SlipperSceneObject.h  SlipperUtils.h  TextureManager.cpp  TextureManager.h  Transform.cpp  Transform.h
source/Slipper_Engine/src/Core/AppComponents/: Camera.h  Ecs.cpp  Ecs.h  Gui.cpp  Gui.h
source/Slipper_Engine/src/Core/Input/: Input.cpp  Input.h
source/Slipper_Engine/src/Core/SlipperObject/: Camera.cpp  Camera.h
source/Slipper_Engine/src/Ecs/Components/: CameraComponent.cpp  CameraComponent.h  IEcsComponent.h  RendererComponent.h  SceneObjectComponent.h  TransformComponent.cpp  TransformComponent.h
source/Slipper_Engine/src/Ecs/Systems/: IEcsSystem.h  RendererUpdateSystem.cpp  RendererUpdateSystem.h
source/Slipper_Engine/src/Engine/: Engine.h  Slipper_Engine.cpp  Slipper_Engine.h
source/Slipper_Engine/src/Filesystem/: File.cpp  File.h  Path.cpp  Path.h
source/Slipper_Engine/src/GPU/: CommandPool.h  Context.h  Device.h  DeviceDependentObject.h  GraphicsEngine.h  GraphicsSettings.h  Material.h  Model.h  RenderingStage.h  SwapChain.h  Texture.h
source/Slipper_Engine/src/GPU/Vulkan/: vk_Buffer.h  vk_CommandPool.h  vk_ComputePipeline.h  vk_ComputeShader.h  vk_Context.h  vk_DepthBuffer.h  vk_Device.h  vk_DeviceDependentObject.h  vk_Framebuffer.h  vk_GraphicsPipeline.h  vk_GraphicsShader.h  vk_IShaderBindableData.h  vk_Instance.h  vk_Material.h  vk_OffscreenSwapChain.h  vk_PipelineLayout.h  vk_RenderPass.h  vk_RenderTarget.h  vk_RenderingStage.h  vk_Sampler.h  vk_Settings.h  vk_Shader.h  vk_ShaderLayout.h  vk_Surface.h  vk_SurfaceSwapChain.h  vk_SwapChain.h  vk_Texture.h  vk_Texture2D.h  vk_UniformBuffer.h
source/Slipper_Engine/src/GPU/internal/: CommandPool.cpp  Context.cpp  DeviceDependentObject.cpp  GraphicsEngine.cpp
source/Slipper_Engine/src/Model/: Model.h
source/Slipper_Engine/src/Platform/: Platform.h
source/Slipper_Engine/src/Platform/Linux/: LinuxSlipper.cpp  LinuxSlipper.h
source/Slipper_Engine/src/Platform/Windows/: WindowsSlipper.h
source/Slipper_Engine/src/Rendering/: GraphicsEngine.cpp  GraphicsEngine.h  RenderingStage.cpp  RenderingStage.h
source/Slipper_Engine/src/Rendering/Data/: Buffer.cpp  Buffer.h  IShaderBindableData.h
source/Slipper_Engine/src/Rendering/Drawing/: CommandPool.cpp  CommandPool.h  Framebuffer.cpp  Framebuffer.h  Sampler.cpp  Sampler.h
source/Slipper_Engine/src/Rendering/GUI/: Gui.cpp  Gui.h
source/Slipper_Engine/src/Rendering/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  Material.cpp  Material.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h
source/Slipper_Engine/src/SceneObjects/: Camera.cpp  Camera.h  SceneObject.cpp  SceneObject.h
source/Slipper_Engine/src/Services/: MaterialManager.cpp  MaterialManager.h  ModelManager.cpp  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
source/Slipper_Engine/src/Time/: Time.cpp  Time.h
source/Slipper_Engine/src/Tutorial/: HelloTriangleApplication.cpp  HelloTriangleApplication.h
source/Slipper_Engine/src/Util/: StringUtil.cpp  StringUtil.h
source/Slipper_Engine/src/VulkanApp/: Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Instance.cpp  Instance.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h
source/Slipper_Engine/src/Window/: Window.cpp  Window.h
source/Slipper_Engine/test/: SlipperEngine_Test.cpp  SlipperEngine_Test.h  TestGui.cpp  TestGui.h
(+121 files in other folders)
